# astrbot_plugin_market_watcher

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  _conf_schema.json  main.py  metadata.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
docs/: COMMANDS.md  CONFIGURATION.md  DESIGN.md  FSD.md  ONLINE_ACCEPTANCE.md  PLUGIN_DEVELOPMENT_PLAYBOOK.md  PRD.md
market_watcher/: __init__.py  ai.py  astrbot_adapter.py  astrbot_handler_compat.py  card_renderer.py  config.py  contracts.py  detect.py  errors.py  github.py  github_diagnostic.py  http.py  merge.py  models.py  normalize.py  outbox.py  scheduler.py  service.py  state.py  status.py  subscriptions.py  summary.py
market_watcher/sources/: __init__.py  github_search.py  issues.py  market.py
scripts/: package_plugin.py  package_release.py  release_common.py  verify_release.py
tests/: __init__.py  test_card_renderer.py  test_github_diagnostic.py  test_handler_compat.py  test_http.py  test_m2.py  test_m3.py  test_m4.py  test_main_import_contract.py  test_normalize.py  test_online_acceptance.py  test_outbox_diagnostic.py  test_package_plugin.py  test_sources.py  test_state.py  test_structure.py  test_t2i_card.py  test_test_ai.py  test_test_push.py
tests/fixtures/: collection_issues.json  github_search.json  github_search_incomplete.json  github_search_malformed_owner.json  github_search_missing_id_mirror.json  github_search_second_page.json  issues_all_damaged.json  legacy_issue_missing_label.json  legacy_issues.json  market_api.json  market_incomplete.json  pagination_error.json  (+1 more)
(+1 files in other folders)
