[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "astrbot-plugin-market-watcher"
version = "1.1.0"
description = "聚合 AstrBot 插件市场与 GitHub 发布信号的监控、摘要和可靠推送插件。"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "233Official" }]
dependencies = ["aiohttp>=3.9,<4"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
# CARD_TEMPLATE Jinja lines exceed 88; they are inside a Python string literal
# so line-length lint would require embedding # noqa inside the template output.
"market_watcher/card_renderer.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["market_watcher*"]
